tests/baselines/reference/unknownSymbols1.errors.txt
==== tests/cases/compiler/unknownSymbols1.ts (13 errors) ====
    var x = asdf;
            ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    var y: asdf;
           ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    
    function foo(x: asdf, y: number): asdf { }
                    ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
                                      ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    function foo2() {
        return asdf;
               ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    }
    
    var z = <asdf>x; // should be an error
             ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    
    class C<T> {
        foo: asdf;
             ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        bar: C<asdf>;
               ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    }
    
    class C2 implements asdf { }
                        ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
    interface I extends adsf { }
                        ~~~~
!!! error TS2095: Could not find symbol 'adsf'.
    
    class C3 { constructor(x: any) { } }
    class C4 extends C3 {
        constructor() {
            super(asdf);
                  ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        }
    }
    
    var x2 = this.asdf; // no error, this is any
    
    class C5 {
        constructor() {
            this.asdf = asdf;
                 ~~~~
!!! error TS2094: The property 'asdf' does not exist on value of type 'C5'.
                        ~~~~
!!! error TS2095: Could not find symbol 'asdf'.
        }
    }